--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,6 +1,7 @@
 .home {
   display: flex;
   flex-direction: column;
+  align-content: center;
   gap: 2rem;
 }
 
@@ -56,7 +57,7 @@
   border-radius: 10px;
 }
 
-@media (400px <= width <= 800px) {
+@media (200px <= width <= 800px) {
   .details-group {
     padding: 0;
   }
