--- a/src/pages/SendPeticion/style.css
+++ b/src/pages/SendPeticion/style.css
@@ -97,7 +97,7 @@
   color: var(--red);
 }
 
-@media (400px <= width <= 800px) {
+@media (200px <= width <= 800px) {
   .form {
     padding: 1rem 0.5rem;
   }
